# uc386

./: .gitignore  CLAUDE.md  PEEPHOLE_PLAN.md  README.md  WIP.md  WIP_NOTE.md  pyproject.toml  run_ctests.py  run_fujitsu.py  run_gcc_torture.py  run_sdcc.py
.github/workflows/: pytest.yml
docs/: addons.txt
lib/: i386_dos_libc.asm
lib/include/: fcntl.h  stdarg.h  stddef.h
lib/include/sys/: mman.h  stat.h  types.h
src/uc386/: __init__.py  asm_dce.py  codegen.py  dos_emu.py  libc_split.py  main.py  peephole.py  runtime.py
tests/: test_asm_dce.py  test_libc_split.py  test_peephole.py  test_smoke.py
