[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uc386"
version = "0.0.1"
description = "C23 compiler targeting x86-32 (i386) and MS-DOS (skeleton)"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "uc_core>=0.1.0",
]
authors = [
    {name = "uc386 developers"}
]
keywords = [
    "compiler", "c", "c23", "i386", "x86", "msdos", "dos",
    "cross-compiler", "retro-computing", "16-bit", "32-bit"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
]

[project.urls]
Homepage = "https://github.com/avwohl/uc386"
Repository = "https://github.com/avwohl/uc386"
Issues = "https://github.com/avwohl/uc386/issues"

[project.scripts]
uc386 = "uc386.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
